# automated_project_setup

./: .gitignore  Cargo.toml  README.md  schema.yaml  second_schema.yaml
project_repository/mocks/python/: dynamo_mock.hbs  mock_listings.yaml  requests_mock.hbs  s3_mock.hbs
project_repository/templates/python38/: main.hbs  secondary.hbs  test.hbs  test_mocks.hbs
src/: language_interpreter.rs  main.rs  signature_parser.rs
src/domains/: cli.rs  file.rs  function_signature.rs  method.rs  mod.rs  schema.rs
